--- a/.aicoe-ci.yaml
+++ b/.aicoe-ci.yaml
@@ -1,7 +1,7 @@
 check:
   - thoth-build
 build:
-  base-image: "quay.io/thoth-station/s2i-minimal-notebook:v0.0.6"
+  base-image: "quay.io/thoth-station/s2i-minimal-py38-notebook"
   build-stratergy: "Source"
   registry: "quay.io"
   registry-org: "thoth-station"
