--- a/Pipfile
+++ b/Pipfile
@@ -6,7 +6,10 @@ verify_ssl = true
 [dev-packages]
 
 [packages]
-elyra = "==2.2.4"
+elyra = "==3.6.0"
+kfp-tekton = "~=1.1.1"
+elyra-examples-kfp-catalog = "==0.1.0"
+python-gitlab = "~=3.2.0"
 
 [requires]
 python_version = "3.8"
