--- a/Pipfile
+++ b/Pipfile
@@ -6,10 +6,7 @@ verify_ssl = true
 [dev-packages]
 
 [packages]
-elyra = "==3.7.0"
-kfp-tekton = "~=1.2.0"
-elyra-examples-kfp-catalog = "==0.1.0"
-python-gitlab = "~=3.2.0"
+"elyra[all]" = "==3.9.1"
 
 [requires]
 python_version = "3.8"
