--- a/.aicoe-ci.yaml
+++ b/.aicoe-ci.yaml
@@ -1,8 +1,8 @@
 check:
   - thoth-build
 build:
-  base-image: "quay.io/thoth-station/s2i-minimal-py38-notebook:v0.5.0"
-  build-stratergy: "Source"
+  build-strategy: Dockerfile
+  dockerfile-path: Dockerfile
   custom-tag: "latest"
   registry: "quay.io"
   registry-org: "thoth-station"
